humanitec/jaytest101/ingress-085d8530b750e939666cb26f1dd0d82fff0c9ea4/ingress-f02a3e2f41d9e47b1dc2088023ceba57d34b6f9d-ingress.yaml
---
# Source: shared-resources/templates/ingress-f02a3e2f41d9e47b1dc2088023ceba57d34b6f9d-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f02a3e2f41d9e47b1dc2088023ceba57d34b6f9d-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: jaytest101.staging.evk8sbswc11.cmp.test.bs.ch
    http:
      paths:
      - backend:
          service:
            name: jaytest101
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jaytest101.staging.evk8sbswc11.cmp.test.bs.ch
    secretName: defunct
